--- a/overseas_migration_media_nextjs/src/app/globals.css
+++ b/overseas_migration_media_nextjs/src/app/globals.css
@@ -1,3 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,700;1,700&family=Roboto:wght@100&display=swap");
+
 @import "~tailwindcss/base";
 @import "~tailwindcss/components";
 @import "~tailwindcss/utilities";
+
+@layer ~tailwindcss/base {
+    html {
+        font-family: 'Poppins', sans-serif;
+    }
+}
